# obsidian-rest-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  flake.nix  pyproject.toml
.github/workflows/: docker-publish.yml
src/obsidian_rest_mcp/: __init__.py  __main__.py  server.py
tests/: test_set_content_type.py
